修复本地文档上传跨域拦截
- 允许 localhost 与 127.0.0.1 的本地开发端口通过 CORS 校验
- 修复 Vite 代理转发浏览器 Origin 后被 Java 返回 403 的问题
- 验证 PDF 经 Web、Java、AI 服务和 MinerU 完成解析并生成 Chunk